# Netology

./: README.md
project_1/: CMakeLists.txt  task_1.cpp
project_10/01/: CMakeLists.txt  my_cringe.cpp
project_10/02/: CMakeLists.txt  RavnTriangle.cpp  Square.h  Triangle_h.h  main.cpp
project_2/: CMakeLists.txt  task_2.cpp
project_3/TaskOne/: CMakeLists.txt  task_3.cpp  task_3_h.h
project_3/TaskTwo/: CMakeLists.txt  Counter.cpp  Counter.h
project_4/: CMakeLists.txt  ad.cpp  ad.h  in.txt  out.txt  outReverse.txt
project_5/01/: CMakeLists.txt  figures.cpp  figures.h
project_5/02/: CMakeLists.txt  figures_and_sides.cpp  figures_and_sides.h
project_5/03/: a  figures_w.cpp  figures_w.h
project_5/task_1/: CMakeLists.txt
project_5/task_2/: CMakeLists.txt  a  figures_and_sides.cpp  figures_and_sides.h
project_6/: CMakeLists.txt  main.cpp
project_6/01/: CMakeLists.txt
project_6/task1/: CMakeLists.txt  cringeAlg.cpp  cringeAlg.h
project_6/task2/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
project_6/task3/: CMakeLists.txt  CorrectTriangle.cpp  CorrectTriangle.h  PryamoUgolnik.cpp  PryamoUgolnik.h  RavnTriangle.h  Square.cpp  Triangle.cpp  main.cpp  squares.cpp  squares.h  triangles.cpp  triangles.h
project_6/task_one/: cringeAlg.h
project_7/task1/: CMakeLists.txt  main.cpp
project_7/task2/: CMakeLists.txt  main.cpp
project_8/01/: CMakeLists.txt  main.cpp
project_8/02/: CMakeLists.txt  figures_w.cpp  figures_w.h
project_9/: a
project_9/01/: CMakeLists.txt  TaskOne.cpp
project_9/02/: CMakeLists.txt  TaskOne.cpp  TaskTwo.cpp  a
